# cs377-project

./: .gitattributes  .gitignore  ENGINE.md  MODEL.md  PROJECT_OVERVIEW.md  REPORT.md  VALIDATION.md  justforunderstanding.md  pyproject.toml  seojun.md  shot_difficulty.md
artifacts/: replay_smoke.html  shot1_clean.html  shot2_cushion_rich.html  shot3_draw_side.html  shot4_strong_cushion.html  shot5_max_top.html  shot6_score.html
billiards/: __init__.py  env.py  inning_env.py
data/: eval_results.parquet  preference_pairs.jsonl  rollouts_geometric.parquet  rollouts_random.parquet
experiments/: VALIDATION_EXPS.md  __init__.py  configs.py  eval_learnmethod.py  eval_policy.py  eval_robustness.py  eval_time_budget.py  experiments.md  normalize_rm.py  plot_learnmethod_curves.py  rm_normalization.json  run_game_solo.py  run_inning_matrix.py  run_inning_random.py  run_inning_random_matrix.py  run_inning_sac.py  run_matrix.py  run_one.py  run_pebble.py  run_pebble_matrix.py  run_validation_algo.ps1  run_validation_learnmethod.ps1  watch_policy.py
models/: ppo_history.csv  reward_history.json  reward_model.pt
notebooks/: 01_env_smoketest.executed.ipynb  01_env_smoketest.ipynb  02_baseline_stats.executed.ipynb  02_baseline_stats.ipynb  03_inning_demo.executed.ipynb  03_inning_demo.ipynb  04_preference_demo.executed.ipynb  04_preference_demo.ipynb  05_reward_model.executed.ipynb  05_reward_model.ipynb  06_eval_results.executed.ipynb  06_eval_results.ipynb  07_iclr_analysis.executed.ipynb  07_iclr_analysis.ipynb  08_pebble_analysis.executed.ipynb  08_pebble_analysis.ipynb  (+2 more)
(+808 files in other folders)
